List of changes from version 2.7 to 3.0 (until January 8th, 2014)
     - comparative gene prediction (cgp) mode to predict genes in several aligned genomes simultaneously (see README-cgp.txt)
     - load2db program to load genomes and hint GFF files into a database for random access retrieval (e.g. with new program getSeq)
     - new parameter --temperature for heating the distribution and obtaining more gene structures during sampling
     - bacterial genes may now also be nested
     - new script weedMaf.pl that throws out gap-only columns from MSAs
     - added prokaryotic template parameters for training new prokaryotic species (on the basis of E_coli_K12 parameters)
     - new species coyote_tobacco (Nicotiana attenuata), thermoanaerobacter_tengcongensis, wheat
     - ATG is not anymore the only start codon
     - filterMaf.pl takes an alignment in MAF format and extracts alignment blocks given a subset of species or a genomic interval
     - bugfixes (in particular segfault on MAC, small memory leaks)
List of changes from version 2.6.1 to 2.7 (until March 4th, 2013)
     - support for prokaryotic genomes (overlapping genes, arbitrary sets of start codons)
       --genemodel=bacterium still preliminary
     - new species chicken, xenoturbella, heliconius_melpomene1, cacao (Don Gilbert)
     - improved species tribolium2012
     - speedup of bam2hints, filterBam (by a very large factor in cases of large headers)
     - no in-frame codon-split stop codons anymore with option --mea=1
     - new script for converting CEGMA gff output format to a gff format
     - database access as alternative to flat file input for comparative gene finding
     - bugfixes (--noprediction, bam2hints, .gb input with Windows line breaks, tetrahymena,
                 optimize_augustus)
List of changes from version 2.6 to 2.6.1 (until June 9th, 2012)
     - make the sources compatible with older compilers that do not understand the flag -std=c++0x
     - script samMap.pl