@@ -1,9 +1,9 @@
 # Definitions common to all Makefiles
 # This file is included from other Makefiles in the augustus project.
+AUGVERSION = 3.0.2
 
 # uncomment this line to enable comparative gene finding (requires young compiler which supports C++11 standard)
-# COMPGENEPRED = true
+#COMPGENEPRED = true
 
 # uncomment this line when you need MySQL access to sequences (most users don't)
-# MYSQL = true
-
+#MYSQL = true
